--- a/src/Components/CustomDrawer/CustomDrawer.scss
+++ b/src/Components/CustomDrawer/CustomDrawer.scss
@@ -1,48 +1,49 @@
 .khelotsu-custom-drawer {
-	background-color: white;
-	width: 100%;
-	height: 100%;
-	overflow-y: auto;
-	border-radius: 0.5rem;
-	transition: transform 0.4s ease-in-out;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    border: 0.25rem solid black;
+    border-radius: 0.5rem;
+    transition: transform 0.4s ease-in-out;
 
-	&-open {
-		transform: translateX(0) !important;
-	}
+    &-open {
+        transform: translateX(0) !important;
+    }
 
-	&-close {
-		transform: translateX(-100%);
-	}
+    &-close {
+        transform: translateX(-100%);
+    }
 
-	&-right {
-		transform: translateX(100%);
-	}
+    &-right {
+        transform: translateX(100%);
+    }
 
-	&-content {
-		height: 100%;
-		display: flex;
-		flex-direction: column;
-		padding: 1rem;
+    &-content {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        padding: 1rem;
 
-		&-heading {
-			font-size: 1.5rem;
-			font-weight: bold;
-			margin-bottom: 20px;
-			display: flex;
-			justify-content: space-between;
-			height: 5%;
+        &-heading {
+            font-size: 1.5rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: space-between;
+            height: 5%;
 
-			&-close-button {
-				position: relative;
-				top: -7.5%;
-				cursor: pointer;
-				display: flex;
-				align-items: flex-start;
-			}
-		}
+            &-close-button {
+                position: relative;
+                top: -7.5%;
+                cursor: pointer;
+                display: flex;
+                align-items: flex-start;
+            }
+        }
 
-		&-children {
-			height: 85%;
-		}
-	}
+        &-children {
+            height: 85%;
+        }
+    }
 }
