--- a/src/Components/GamesList/GamesList.scss
+++ b/src/Components/GamesList/GamesList.scss
@@ -1,19 +1,22 @@
 .khelotsu-frontend-games-list {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	gap: 1rem;
-	background-image: url("../../Assets/Images/games-dashboard-bg.jpg");
-	background-size: 100% 100%; /* Cover entire container */
-	background-position: center; /* Center the image */
-	width: 100vw; /* Full width of the viewport */
-	height: calc(100vh - 6rem);
+    padding: 1rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+    background-image: url('../../Assets/Images/games-dashboard-bg.jpg');
+    background-size: 100% 100%; /* Cover entire container */
+    background-position: center; /* Center the image */
+    width: 100vw; /* Full width of the viewport */
+    height: calc(100vh - 8rem);
 
-	&-game {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		border: 1rem solid blue;
-		font-size: 4rem;
-		cursor: pointer;
-	}
+    
+    &-game {
+        margin: 0rem 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1rem solid blue;
+        font-size: 4rem;
+        cursor: pointer;
+    }
 }
