Add addUser, removeUser, userlist functionality in game section with validations.

--- a/src/Components/CustomDrawer/CustomDrawer.scss
+++ b/src/Components/CustomDrawer/CustomDrawer.scss
@@ -28,7 +28,7 @@
         &-heading {
             font-size: 1.5rem;
             font-weight: bold;
-            margin-bottom: 20px;
+            margin-bottom: 0.5rem;
             display: flex;
             justify-content: space-between;
             height: 5%;
