--- a/src/Components/Games/Chess/Chess.scss
+++ b/src/Components/Games/Chess/Chess.scss
@@ -1,129 +1,141 @@
 .chess {
-    width: 28rem;
-    height: 28rem;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    &-game {
+        width: 28rem;
+        height: 28rem;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
-    &-col {
-        &-l {
-            background-color: rgb(247, 203, 203);
+        &-col {
+            &-l {
+                background-color: rgb(247, 203, 203);
+            }
+
+            &-d {
+                background-color: rgb(170, 135, 135);
+            }
         }
 
-        &-d {
-            background-color: rgb(170, 135, 135);
+        &-ranks {
+            position: absolute;
+            left: 0%;
+            height: 90%;
+
+            &-rank {
+                height: 12.5%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
         }
-    }
 
-    &-ranks {
-        position: absolute;
-        left: 0%;
-        height: 90%;
-
-        &-rank {
-            height: 12.5%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-    }
-
-    &-board {
-        width: 90%;
-        height: 90%;
-        border: 1px solid black;
-        box-sizing: border-box;
-        display: grid;
-        grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: repeat(8, 1fr);
-
-        &-block {
+        &-board {
+            width: 90%;
+            height: 90%;
             border: 1px solid black;
+            box-sizing: border-box;
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+            grid-template-rows: repeat(8, 1fr);
+
+            &-block {
+                border: 1px solid black;
+            }
+
+            .occupied {
+                cursor: pointer;
+                width: 100%;
+                height: 100%;
+                background-size: 75% 75%;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+
+            .rb {
+                background-image: url("../../../Assets/Icons/chess/rb.png");
+            }
+
+            .rw {
+                background-image: url("../../../Assets/Icons/chess/rw.png");
+            }
+
+            .kb {
+                background-image: url("../../../Assets/Icons/chess/kb.png");
+            }
+
+            .kw {
+                background-image: url("../../../Assets/Icons/chess/kw.png");
+            }
+
+            .bb {
+                background-image: url("../../../Assets/Icons/chess/bb.png");
+            }
+
+            .bw {
+                background-image: url("../../../Assets/Icons/chess/bw.png");
+            }
+
+            .qb {
+                background-image: url("../../../Assets/Icons/chess/qb.png");
+            }
+
+            .qw {
+                background-image: url("../../../Assets/Icons/chess/qw.png");
+            }
+
+            .kib {
+                background-image: url("../../../Assets/Icons/chess/kib.png");
+            }
+
+            .kiw {
+                background-image: url("../../../Assets/Icons/chess/kiw.png");
+            }
+
+            .pb {
+                background-image: url("../../../Assets/Icons/chess/pb.png");
+            }
+
+            .pw {
+                background-image: url("../../../Assets/Icons/chess/pw.png");
+            }
+
+            .reach {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &::after {
+                    content: "";
+                    width: 20%;
+                    height: 20%;
+                    background-color: rgb(196, 165, 165);
+                    border-radius: 50%;
+                }
+            }
         }
 
-        .occupied {
-            cursor: pointer;
-            width: 100%;
-            height: 100%;
-            background-size: 75% 75%;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        .rb {
-            background-image: url("../../../Assets/Icons/chess/rb.png");
-        }
-
-        .rw {
-            background-image: url("../../../Assets/Icons/chess/rw.png");
-        }
-
-        .kb {
-            background-image: url("../../../Assets/Icons/chess/kb.png");
-        }
-
-        .kw {
-            background-image: url("../../../Assets/Icons/chess/kw.png");
-        }
-
-        .bb {
-            background-image: url("../../../Assets/Icons/chess/bb.png");
-        }
-
-        .bw {
-            background-image: url("../../../Assets/Icons/chess/bw.png");
-        }
-
-        .qb {
-            background-image: url("../../../Assets/Icons/chess/qb.png");
-        }
-
-        .qw {
-            background-image: url("../../../Assets/Icons/chess/qw.png");
-        }
-
-        .kib {
-            background-image: url("../../../Assets/Icons/chess/kib.png");
-        }
-
-        .kiw {
-            background-image: url("../../../Assets/Icons/chess/kiw.png");
-        }
-
-        .pb {
-            background-image: url("../../../Assets/Icons/chess/pb.png");
-        }
-
-        .pw {
-            background-image: url("../../../Assets/Icons/chess/pw.png");
-        }
-
-        .reach {
+        &-files {
+            position: absolute;
+            bottom: 0%;
+            width: 90%;
             display: flex;
-            justify-content: center;
-            align-items: center;
 
-            &::after {
-                content: "";
-                width: 20%;
-                height: 20%;
-                background-color: rgb(196, 165, 165);
-                border-radius: 50%;
+            &-file {
+                width: 12.5%;
+                display: flex;
+                justify-content: center;
             }
         }
     }
 
-    &-files {
-        position: absolute;
-        bottom: 0%;
-        width: 90%;
+    &-start {
         display: flex;
-
-        &-file {
-            width: 12.5%;
-            display: flex;
-            justify-content: center;
+        justify-content: center;
+        margin: 1rem;
+        
+        &-btn {
+            cursor: pointer;
         }
     }
 }
