--- a/src/Components/Games/TicTacToe/TicTacToe.scss
+++ b/src/Components/Games/TicTacToe/TicTacToe.scss
@@ -1,37 +1,40 @@
 .khelotsu-tictactoe {
+    height: 100%;
+  
     &-game {
-        width: 25rem;
-        height: 25rem;
-        background-color: white;
+      width: 25rem;
+      height: 90%;
+      background-color: white;
+      border: 1px solid black;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      box-sizing: border-box;
+  
+      &-square {
         border: 1px solid black;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
         box-sizing: border-box;
-
-        &-square {
-            border: 1px solid black;
-            box-sizing: border-box;
-            cursor: pointer;
-            position: relative;
-
-
-            span {
-                font-size: 4rem;
-                position: absolute; // can't do with flex as it affects size of borders
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%); // Center it properly
-            }
+        cursor: pointer;
+        position: relative;
+  
+        span {
+          font-size: 4rem;
+          position: absolute; // can't do with flex as it affects size of borders
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%); // Center it properly
         }
+      }
     }
-
+  
     &-start {
-        display: flex;
-        justify-content: center;
-        margin: 1rem;
-        
-        &-btn {
-            cursor: pointer;
-        }
+      display: flex;
+      justify-content: center;
+      margin: 1rem;
+      font-size: 12px;
+  
+      &-btn {
+        cursor: pointer;
+      }
     }
-}
+  }
+  
