--- a/src/Components/GamesList/GamesList.scss
+++ b/src/Components/GamesList/GamesList.scss
@@ -7,7 +7,7 @@
     background-size: 100% 100%; /* Cover entire container */
     background-position: center; /* Center the image */
     width: 100vw; /* Full width of the viewport */
-    height: calc(100vh - 8rem);
+    height: calc(100vh - 5rem);
 
     
     &-game {
@@ -17,6 +17,7 @@
         align-items: center;
         border: 1rem solid blue;
         font-size: 4rem;
+        text-align: center;
         cursor: pointer;
     }
 }
