--- a/src/Components/CustomInput/CustomInput.scss
+++ b/src/Components/CustomInput/CustomInput.scss
@@ -1,36 +1,36 @@
 .custom-input {
 	position: relative;
 	width: 100%;
-
-	input {
-		padding-top: 1.25rem;
-		width: 100%;
-		border: none;
-		border-bottom: 1px solid black;
-		border-radius: 5px;
-		transition: border-color 0.3s ease;
-
-		&:hover,
-		&:focus {
-			outline: none;
-			border: none;
-			border-bottom: 1px solid black;
-		}
-	}
-
+  
 	label {
-		position: absolute;
-		left: 10px;
-		top: 50%;
-		transform: translateY(-50%);
-		color: #aaa;
-		pointer-events: none;
-		transition: top 0.3s, font-size 0.3s, color 0.3s;
+	  position: absolute;
+	  top: 50%;
+	  left: 5px;
+	  transform: translateY(-50%);
+	  font-size: inherit;
+	  color: #333;
+	  padding: 0 5px;
+	  pointer-events: none;
+	  transition: 0.5s;
 	}
-
-	&.focused label {
-		top: 0%;
+  
+	input {
+	  width: 100%;
+	  height: 40px;
+	  font-size: inherit;
+	  color: #333;
+	  padding: 0 10px;
+	  background: transparent;
+	  border: 1px solid #333;
+	  outline: none;
+	  border-radius: 5px;
+  
+	  &:focus ~ label,
+	  &:valid ~ label {
+		top: 0;
 		font-size: 12px;
-		color: #007bff;
+		background: #fff;
+	  }
 	}
-}
+  }
+  
