--- a/src/Components/GamesBoxDisplay/GamesBoxDisplay.scss
+++ b/src/Components/GamesBoxDisplay/GamesBoxDisplay.scss
@@ -1,9 +1,27 @@
 .games-box-display {
-	background-size: 100% 100%; /* Cover entire container */
-	background-position: center;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    background-size: 100% 100%; /* Cover entire container */
+    background-position: center;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden; /* Hide overflowing content */
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    }
+
+    span {
+        color: white; /* Text color */
+        font-weight: bold; /* Bold font */
+        z-index: 1; /* Ensure text appears above the overlay */
+    }
 }
