--- a/src/Pages/GameSection/GameSection.scss
+++ b/src/Pages/GameSection/GameSection.scss
@@ -2,8 +2,19 @@
     background-size: 100% 100%; /* Cover entire container */
     background-position: center; /* Center the image */
     width: 100vw; /* Full width of the viewport */
-    height: calc(100vh - 6rem);
+    height: calc(100vh - 5rem);
     position: relative;
+    overflow: hidden;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5); /* Adjust the opacity as needed */
+    }
 
     &-drawer {
         position: absolute;
@@ -25,9 +36,9 @@
             align-items: center;
 
             img {
-                width: 25%;
-                height: 75%;
-                border-radius: 0.5rem;
+                width: 15%;
+                height: 50%;
+                border-radius: 50%;
                 padding: 0.25rem;
                 cursor: pointer;
                 background-color: wheat;
@@ -60,7 +71,7 @@
 
     &-section {
         position: relative;
-        top: 10%;
+        top: 2.5%;
         left: 50%;
         transform: translate(-50%);
         display: flex;
@@ -69,6 +80,7 @@
         background-color: wheat;
         padding: 1rem;
         width: fit-content;
+        height: 50%;
         border: 0.5rem solid black;
         border-radius: 0.5rem;
 
@@ -93,9 +105,17 @@
                 transform: translate(-15%);
             }
         }
+
+        &-game {
+            height: 100%;
+        }
     }
 
     &-chat {
         right: 0;
+    }
+
+    &-video-call {
+        height: 40%;
     }
 }
