--- a/src/Components/CustomButton/CustomButton.scss
+++ b/src/Components/CustomButton/CustomButton.scss
@@ -1,6 +1,5 @@
 .custom-button {
     position: relative;
-    display: inline-block;
     padding: 8px 15px;
     border: none;
     outline: none;
@@ -18,26 +17,12 @@
     width: 100%;
     height: inherit;
 
+    display: flex;
+    align-items: center;
+
     &:hover {
         transform: translateY(-2px);
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     }
 
-    &:active .ripple {
-        animation: rippleEffect 0.6s linear;
-    }
-
-    .ripple {
-        position: absolute;
-        border-radius: 50%;
-        background: rgba(255, 255, 255, 0.4);
-        transform: scale(0);
-    }
-
-    @keyframes rippleEffect {
-        to {
-            transform: scale(4);
-            opacity: 0;
-        }
-    }
 }
