Make responsive UI and fix webrtc issue.

--- a/src/Components/ChatDetails/UsersDetails/UsersDetails.scss
+++ b/src/Components/ChatDetails/UsersDetails/UsersDetails.scss
@@ -1,55 +1,70 @@
 .users-details {
-    height: 100%;
-  
-    &-display {
-      height: 75%;
-  
-      &-user {
+  height: 100%;
+
+  &-display {
+    height: 75%;
+
+    &-user {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0.5rem;
+      border: 1px solid black;
+      border-radius: 0.25rem;
+      height: 2rem;
+      padding: 0 0.5rem;
+
+      &__remove {
+        width: 1.5rem;
+        height: 1.5rem;
+        font-size: 1.5rem;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-        margin: 0.5rem;
-        border: 1px solid black;
-        border-radius: 0.25rem;
-        height: 2rem;
-        padding: 0 0.5rem;
-  
-        &__remove {
-          width: 1.5rem;
-          height: 1.5rem;
-          font-size: 1.5rem;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          cursor: pointer;
-        }
+        cursor: pointer;
       }
     }
-  
-    &-add-user {
-      height: 25%;
+  }
+
+  &-add-user {
+    height: 25%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &-form {
       width: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  
+      justify-content: space-between;
+      margin: 2rem 0.5rem;
+
+      &-input {
+        width: 65%;
+        font-size: 14px;
+      }
+
+      &-submit {
+        width: 30%;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .users-details {
+    &-add-user {
       &-form {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        margin: 2rem 0.5rem;
-  
         &-input {
-          width: 65%;
-          font-size: 14px;
+          font-size: 12px;
         }
-  
+
         &-submit {
-          width: 30%;
-          cursor: pointer;
+          font-size: 12px;
         }
       }
     }
   }
-  
+}
