--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,8 +1,5 @@
-$login-div-width: 20rem;
-
 .khelotsu-login {
-  width: $login-div-width;
-  width: inherit;
+  width: auto;
   height: inherit;
   border-radius: 1rem;
   padding: 4rem;
@@ -13,7 +10,7 @@ $login-div-width: 20rem;
   align-items: center;
 
   &-form {
-    width: calc($login-div-width - 2rem);
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -27,24 +24,6 @@ $login-div-width: 20rem;
     &-component {
       margin-bottom: 2rem;
       display: flex;
-
-      &-label {
-        margin-right: 2rem;
-        width: 5rem;
-      }
-
-      &-input {
-        border: none;
-        border-bottom: 1px solid black;
-        width: 10rem;
-
-        &:hover,
-        &:focus {
-          outline: none;
-          border: none;
-          border-bottom: 1px solid black;
-        }
-      }
     }
 
     &-submit {
@@ -75,5 +54,14 @@ $login-div-width: 20rem;
         text-decoration: underline;
       }
     }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .khelotsu-login { 
+    padding: 3rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
