--- a/src/Utils/Scss/variables.scss
+++ b/src/Utils/Scss/variables.scss
@@ -1,9 +1,8 @@
 $deviceBpPx: (
+  "mobile": 480,
   "tablet": 768,
   "smallDesktop": 992,
   "mediumDesktop": 1200,
   "largeDesktop": 1400,
   "tv": 1920,
 ) !default;
-
-
