--- a/src/Components/CustomButton/CustomButton.scss
+++ b/src/Components/CustomButton/CustomButton.scss
@@ -15,7 +15,7 @@
     letter-spacing: 1px;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
     width: 100%;
-    height: inherit;
+    height: 100%;
 
     display: flex;
     align-items: center;
