--- a/src/Components/CustomDrawer/CustomDrawer.scss
+++ b/src/Components/CustomDrawer/CustomDrawer.scss
@@ -1,50 +1,61 @@
 .khelotsu-custom-drawer {
-    background-color: white;
-    width: 100%;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  border: 0.25rem solid black;
+  border-radius: 0.5rem;
+  transition: transform 0.4s ease-in-out;
+
+  &-open {
+    transform: translateX(0) !important;
+    z-index: 4;
+  }
+
+  &-close {
+    transform: translateX(-100%);
+    z-index: auto;
+  }
+
+  &-right {
+    transform: translateX(100%);
+  }
+
+  &-content {
     height: 100%;
-    overflow-y: auto;
-    border: 0.25rem solid black;
-    border-radius: 0.5rem;
-    transition: transform 0.4s ease-in-out;
-  
-    &-open {
-      transform: translateX(0) !important;
-    }
-  
-    &-close {
-      transform: translateX(-100%);
-    }
-  
-    &-right {
-      transform: translateX(100%);
-    }
-  
-    &-content {
-      height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+
+    &-heading {
+      font-size: 1.25rem;
+      font-weight: bold;
+      margin-bottom: 0.5rem;
       display: flex;
-      flex-direction: column;
-      padding: 1rem;
-  
-      &-heading {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 0.5rem;
+      justify-content: space-between;
+      height: 5%;
+
+      &-close-button {
+        position: relative;
+        top: -7.5%;
+        cursor: pointer;
         display: flex;
-        justify-content: space-between;
-        height: 5%;
-  
-        &-close-button {
-          position: relative;
-          top: -7.5%;
-          cursor: pointer;
-          display: flex;
-          align-items: flex-start;
-        }
+        align-items: flex-start;
       }
-  
-      &-children {
-        height: 95%;
+    }
+
+    &-children {
+      height: 95%;
+    }
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .khelotsu-custom-drawer {
+    &-content {
+      &-heading {
+        font-size: 1rem;
       }
     }
   }
-  
+}
