--- a/src/Components/Media/Media.scss
+++ b/src/Components/Media/Media.scss
@@ -5,42 +5,65 @@
     left: 50%;
     bottom: 0%;
     transform: translate(-50%);
-
+  
     &-video-call {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        width: 95%;
-        height: 80%;
-        padding: 0.5rem;
-        border: 1px solid blue;
-
-        &-box {
-            width: 75%;
-
-            video {
-                width: 100%;
-                height: 100%;
-            }
+      display: flex;
+      gap: 5%;
+      background: darkgrey;
+      width: 95%;
+      height: 80%;
+      padding: 0.5rem;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+      border-radius: 0.5rem;
+  
+      &-box {
+        width: 40%;
+        height: 50%;
+        overflow: hidden;
+  
+        &-username {
+          display: flex;
+          justify-content: center;
+          margin: 0.5rem 0rem;
         }
-    }
-
-    &-settings {
-        height: 10%;
-        display: flex;
-        justify-content: space-evenly;
-
-        &-div {
+  
+        &-details {
+          width: 100%;
+          height: 100%;
+  
+          video {
             width: 100%;
             height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            img {
-                cursor: pointer;
-                width: 2rem;
-                height: inherit;
-            }
+          }
         }
+      }
     }
-}
+  
+    &-settings {
+      height: 10%;
+      display: flex;
+      justify-content: space-evenly;
+  
+      &-div {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  
+        img {
+          cursor: pointer;
+          width: 2rem;
+          height: inherit;
+        }
+      }
+    }
+  }
+  
+  @media only screen and (max-width: 480px) {
+    .media {
+      width: 67.5%;
+      left: 52%;
+    }
+  }
+  
