--- a/src/Pages/Authentication/Authentication.scss
+++ b/src/Pages/Authentication/Authentication.scss
@@ -1,5 +1,7 @@
 .khelotsu-authentication {
-	background: linear-gradient(45deg, #11ee72, #2962ff);
+	position: fixed;
+	top: 5rem;
+	background: linear-gradient(45deg, transparent, #1f2421);
 	background-size: 100% 100%; /* Cover entire container */
 	background-position: center; /* Center the image */
 	width: 100vw; /* Full width of the viewport */
@@ -7,12 +9,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: relative;
   
 	&-wrapper {
 	  position: absolute;
 	  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	  width: 31rem;
+	  min-width: 20rem;
+	  max-width: 32rem;
+	  width: 80vw;
 	  height: 37rem;
   
 	  &.sign-up {
